ADD_SUBDIRECTORY(airport)
ADD_SUBDIRECTORY(disksim)
ADD_SUBDIRECTORY(olsr-c)
ADD_SUBDIRECTORY(olsr-j)
ADD_SUBDIRECTORY(phold)
ADD_SUBDIRECTORY(pcs)
# ADD_SUBDIRECTORY(bittorrent)
# ADD_SUBDIRECTORY(tcp)
ADD_SUBDIRECTORY(raid)
ADD_SUBDIRECTORY(srw)
ADD_SUBDIRECTORY(torus)
ADD_SUBDIRECTORY(traffic)
ADD_SUBDIRECTORY(wifi)
ADD_SUBDIRECTORY(gates)
ADD_SUBDIRECTORY(dragonfly)
#ADD_SUBDIRECTORY(wsn)
ADD_SUBDIRECTORY(qhold)
ADD_SUBDIRECTORY(qhold_fp)
ADD_SUBDIRECTORY(rng)
IF(MEMORY)
ADD_SUBDIRECTORY(mem-test)
ENDIF(MEMORY)
