IF(BGPM)
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${BGPM_LIB})
ELSE(NOT(BGPM))
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR})
ENDIF(BGPM)

SET(dphold_srcs
dphold.c		dphold.h)

ADD_EXECUTABLE(dphold ${dphold_srcs})

IF(BGPM)
	TARGET_LINK_LIBRARIES(dphold ROSS imp_bgpm m)   
ELSE(NOT(BGPM))
	TARGET_LINK_LIBRARIES(dphold ROSS m)   
ENDIF(BGPM)
